[project]
name = "useargus"
version = "0.2.0"
description = "Load environment variables from Argus via IPC, with .env fallback"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "useargus" }]
keywords = [
    "argus",
    "secrets",
    "env",
    "dotenv",
    "environment-variables",
    "ipc",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.15,<0.16.0",
    "mypy>=1.13",
    "build>=1.2",
    "types-requests>=2.32",
    "requests>=2.32",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/useargus-dev/py-argus"
Repository = "https://github.com/useargus-dev/py-argus"
Issues = "https://github.com/useargus-dev/py-argus/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["useargus"]

[tool.hatch.build.targets.sdist]
include = [
    "/useargus",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["useargus"]

[[tool.mypy.overrides]]
module = [
    "httpx",
    "langchain_anthropic",
    "langchain_anthropic._client_utils",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
